# django-docker

./: .bash_history  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  dev-requirements.in  dev-requirements.txt  docker-compose-ci.yml  docker-compose-stack.yml  docker-compose.yml  entrypoint.sh  mydatabase  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: main-ci.yml  main.yml  pr-ci.yml  release-ci.yml
composeexample/: settings.py  urls.py  views.py
django_docker/: celery.py  middlewares.py  settings.py  urls.py  views.py  wsgi.py
django_docker/apps/main/: admin.py  apps.py  tasks.py  urls.py  views.py
django_docker/apps/main/migrations/: 0001_initial.py
scripts/: build.sh  smoke_test.py
